--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -106,6 +106,7 @@ input[type="tel"],
 input[type="text"],
 input[type="email"],
 input[type="password"],
+input[type="number"],
 textarea {
   background: #fff;
   border: 1px solid #E8E8E8;
@@ -120,6 +121,7 @@ input[type="tel"]:focus,
 input[type="text"]:focus,
 input[type="email"]:focus,
 input[type="password"]:focus,
+input[type="number"]:focus,
 textarea:focus {
   border-color: #d84f5d; }
 
@@ -134,6 +136,7 @@ input[type="tel"]:focus::placeholder,
 input[type="text"]:focus::placeholder,
 input[type="email"]:focus::placeholder,
 input[type="password"]:focus::placeholder,
+input[type="number"]:focus::placeholder,
 textarea:focus::placeholder {
   opacity: 0; }
 
@@ -160,7 +163,8 @@ button {
   cursor: pointer;
   display: inline-block;
   font-size: inherit;
-  font-family: inherit; }
+  font-family: inherit;
+  color: #fff; }
 
 /* CONTAINER */
 .container {
@@ -581,6 +585,8 @@ button {
     width: 7px;
     border-radius: 50%;
     background: #d94f5c; }
+  .box__list p {
+    margin: 0 0 5px; }
   .box__term {
     font-style: italic;
     margin: 25px 30px; }
@@ -606,6 +612,8 @@ button {
     max-width: 100%;
     border: 1px solid #b1b1b1;
     margin: 20px 0 30px; }
+  .box input {
+    max-width: 350px; }
 
 @keyframes dot {
   0% {
