--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -540,6 +540,11 @@ button {
 .main {
   margin-top: 180px; }
 
+@media (max-width: 1023px) {
+  .main {
+    margin-top: 40px;
+    padding-top: 15px; } }
+
 .box {
   padding: 20px 0 30px;
   border-bottom: 1px solid rgba(255, 255, 255, 0.15); }
@@ -1017,6 +1022,11 @@ table td {
   background: #1c1d22;
   border-bottom: 1px solid rgba(216, 79, 93, 0.15);
   box-shadow: 0 0 15px rgba(216, 79, 93, 0.3); }
+  .header__burger {
+    display: none; }
+
+.nav__title, .nav__close {
+  display: none; }
 
 .nav__item {
   display: inline-block;
@@ -1044,6 +1054,67 @@ table td {
 @keyframes line {
   0% {
     background-position-x: 390px; } }
+
+@media (max-width: 1023px) {
+  .header {
+    padding: 15px 0; }
+    .header__burger {
+      display: block; }
+  .burger {
+    width: 30px;
+    height: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative; }
+    .burger__line {
+      height: 2px;
+      width: 100%;
+      background: #fff; }
+      .burger__line:nth-child(1) {
+        position: absolute;
+        top: 0;
+        left: 0; }
+      .burger__line:nth-child(3) {
+        position: absolute;
+        bottom: 0;
+        left: 0; }
+  .nav {
+    background: #1c1d22;
+    position: fixed;
+    z-index: 110;
+    top: 0;
+    left: -320px;
+    bottom: 0;
+    width: 320px;
+    transition: all ease 0.4s; }
+    .nav.active {
+      left: 0; }
+    .nav__title {
+      display: block;
+      font-weight: 700;
+      font-size: 20px;
+      color: #fff;
+      padding: 10px;
+      border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+      margin: 0 0 15px; }
+    .nav__close {
+      display: block;
+      height: 30px;
+      width: 30px;
+      position: absolute;
+      top: 5px;
+      right: 5px;
+      color: #fff;
+      font-weight: 400;
+      font-size: 35px;
+      transform: rotate(45deg); }
+    .nav__list {
+      padding: 10px;
+      height: calc(100% - 45px);
+      overflow-y: scroll; }
+    .nav__item {
+      display: block; } }
 
 .modal-open {
   overflow: hidden; }
